volsyncdr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ocppvcquarkus
  name: ocppvcquarkus
  namespace: volsynctest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocppvcquarkus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ocppvcquarkus
        deployment: ocppvcquarkus
    spec:
      containers:
      - image: quay.io/summu85/pvc-quarkus:latest
        imagePullPolicy: IfNotPresent
        name: ocppvcquarkus
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /tmp
          name: volsyncpvc
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volsyncpvc
        persistentVolumeClaim:
          claimName: volsyncpvc
