volsyncdr/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ocppvcquarkus
  name: ocppvcquarkus
  namespace: volsynctest
spec:
  host: ocppvcquarkus-volsynctest.apps.ocpmngcluster1.intel.demolab.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ocppvcquarkus
    weight: 100
  wildcardPolicy: None
